--- a/404.html
+++ b/404.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="http://example.org/css/bootstrap.css">
-    <link rel="stylesheet" href="http://example.org/css/custom.css">
+    <link rel="stylesheet" href="https://nodessl.com/css/bootstrap.css">
+    <link rel="stylesheet" href="https://nodessl.com/css/custom.css">
 </head>
 <body>
     <main id="main">
@@ -16,7 +16,7 @@
                     <div class="col-lg-8">
                         <h1 class="display-4 mb-5 mt-5">Page not found</h1>
                         <p class="lead mb-5">The page you are looking for does not exist.</p>
-                        <a href="http://example.org/" class="btn btn-primary rounded-pill">Go to home page</a>
+                        <a href="https://nodessl.com/" class="btn btn-primary rounded-pill">Go to home page</a>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
           <div class="col-4 col-md-2 mb-4">
               
               <ul class="nav flex-column">
-                  <li class="mb-1"><a href="http://example.org/" class="text-secondary">返回首页</a></li>
+                  <li class="mb-1"><a href="https://nodessl.com/" class="text-secondary">返回首页</a></li>
                   
               </ul>
           </div>
